--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "kodnificent/laravel-otp",
     "description": "Package for generating and sending otp",
     "type": "library",
+    "license": "MIT",
     "require": {
         "php": "^7.2|^8.0",
         "illuminate/support": "^7.0",
