--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2|^8.0",
-        "illuminate/support": "^7.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
         "spomky-labs/otphp": "^10.0"
     },
     "autoload": {
